# ParaCL

./: CMakeLists.txt  main.cpp  tests.cpp
Nodes/: MyLexer.cpp  MyLexer.h  Node.cpp  Node.h  driver.cpp  driver.h
tests/: CMakeLists.txt
tests/gtests/: factorial_test.txt  func_test1.txt  func_test2.txt  func_test3.txt  func_test4.txt  scope_test1.txt  test1.txt  test2.txt  test3.txt  test4.txt
